--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
     <button id="Titanic">Titanic</button>
-    <button id="Terminator 2">Terminator 2</button>
+    <button id="Terminator-2">Terminator 2</button>
   </nav>
   <div id="moviePage">
     <header>
@@ -27,7 +27,9 @@
       <div id="listSection">
         <div>
           <h2>Cast</h2>
-          <div id="cast"></div>
+          <div>
+            <p id="cast"></p>
+          </div>
         </div>
         <div>
           <h2>Reviews</h2>
